Reviewer and many fixes

--- a/holosophos/prompts/mle_solver.yaml
+++ b/holosophos/prompts/mle_solver.yaml
@@ -145,8 +145,8 @@ plan: |
   First, build a survey of facts known or needed to solve the task.
   Provide fact survey using exactly this structure:
 
-  1. Facts given in the task
-  What we know from task description
+  1. Facts given in the conversation
+  What we know from the conversation
   2. Facts to look up
   What to look up + sources
   3. Facts to derive
@@ -173,8 +173,7 @@ plan: |
   You can leverage these tools:
   {% for tool in tools %}
   ### {{ tool.name }}
-  {{ tool.description }}
-  Arguments: {{tool.inputSchema.properties}}
+  {{ tool.description|truncate(300) }}
   {% endfor %}
 
   Suggest using general tools first. For instance, always use web search before ArXiv search.
@@ -184,7 +183,7 @@ plan_prefix: |
   Here are the facts I know and the plan of action that I will follow to solve the task:
 
 plan_suffix: |
-  Now I will execute the plan above step by step.
+  Now execute the plan above step by step.
 
 no_code_action: |
   No code block or final answer was provided.
