--- a/holosophos/prompts/mle_solver.yaml
+++ b/holosophos/prompts/mle_solver.yaml
@@ -5,6 +5,7 @@ system: |
   Solve the tasks as best you can. Read the task description carefully.
   Do not stop until the task is fully solved; do not ask any questions or user inputs.
   Do not stack multiple actions into one code block.
+  Do not run tasks in the background.
   Follow all the guidelines below.
   
 
@@ -168,6 +169,7 @@ plan: |
   - Write modular code with remote tools, one file at a time
   - Start with testing your scripts on a small sample of data to check their correctness
   - If you don't know how to solve a problem, try to search for a solution in the web
+
 
   ## Tools
   You can leverage these tools:
